2009-03-11 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c: retain the original file mode

2009-03-10 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/gen.c, src/z80/gen.c, src/hc08/gen.c, src/ds390/gen.c,
	  support/regression/tests/bug1875933.c:
	  fixed bug #1875933: Evelyn jumps into the void
	  thanks to Robert Larice

2009-03-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (LinkFlow): fix invalid cast from pCodeLabel
	  to pCodeInstruction to avoid a segmentation fault

2009-03-03 Borut Razem <borut.razem AT siol.net>

	* device/lib/printf_large.c: fixed bug #2656821: bug in printf

2009-03-03 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/Makefile.in: build device-specific
	  libraries for the correct processor, fixes #2654585

2009-03-01 Raphael Neider <rneider AT web.de>

	* device/lib/Makefile.in: fixed parallel builds (i.e., make -jN, N>1)

2009-03-01 Borut Razem <borut.razem AT siol.net>

	* src/z80/peep.c: fixed bug #2648964: --i-code-in-asm crashes sdcc
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 2.9.0

2009-03-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (spillThis, spilSomething): fixed bug 2435941
	  (serialRegAssign): do not spil bit registers
	  throughout cosmetic changes
	* support/regression/tests/bug2435941.c: new, added

2009-02-28 Raphael Neider <rneider AT web.de>

	* src/regression/compare10.c,
	  src/regression/compare7.c,
	  src/regression/compare8.c,
	  src/regression/compare9.c: reset watchdog timer in time
	* src/regression/configword.c: apply patch from #2488150
	* src/pic/glue.c (pic14createInterruptVect): pin RESET vector
	  handler to 0x0000 as the linker no longer knows STARTUP sections
	* src/pic/pcode.c (register_reassign, ReuseReg): applied modified
	  patch #2512926 to (mostly) fix #1762626, cosmetic changes
	* src/pic/pcodepeep.c: remove reference to nonexisting function
